--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    /* outline: solid 1px red; */
+    /* outline: solid 1px red;   */
 }
 html{
     font-size: 100%;
@@ -492,3 +492,52 @@ main {
     max-width: 500px;
     width: 100%;
 }
+
+.page{
+    width: 90vw;
+    max-width: var(--max-width);
+    margin: 0 auto;
+    padding-top: 2rem;
+    min-height: calc(100vh - (6rem + 4rem));
+}
+
+.hero{
+    height: 40vh;
+    background: url('../assets/main.jpeg') center/cover no-repeat;
+    margin-bottom: 2rem;
+    border-radius: var(--borderRadius);
+    position: relative;
+}
+.about-page {
+    display: flex;
+    flex-direction: column;
+    gap: 3em;
+}
+.about-page article {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    align-items: start;
+    justify-content: center;
+}
+.hero-container{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.4);
+    border-radius: var(--borderRadius);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.hero-text{
+    text-align: center;
+    color: var(--white);
+}
+
+.headings { margin-bottom: 1em; padding:
+    3em; display: flex; flex-direction: column; gap: 10px; } .headings h1 {
+    font-size: 50px; }
+
